# odoo-addons

./: pyproject.toml
github/workflows/: pre-commit.yml
web_dark/: __manifest__.py
web_dark/static/src/js/: color_scheme.js
web_dark/static/src/scss/: bootstrap_overridden.scss  bs_functions_overridden.dark.scss  primary_variables.dark.scss  primary_variables.scss
web_dark/static/src/views/: navbar.dark.scss  navbar.scss
web_dark/views/: webclient_templates.xml
